--- a/Pipfile
+++ b/Pipfile
@@ -27,4 +27,5 @@ raven = "==6.3.0"
 django-extensions = "==1.9.8"
 graphene-django = "==2.0.0"
 django-filter = "==2.0.0.dev1"
+pillow = "==5.0.0"
 wagtail = "*"
