--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "\"Heroku client build\"",
   "scripts": {
-    "postinstall": "npm install --prefix cariot_frontend && npm run build --prefix cariot_frontend"
+    "postinstall": "npm install --prefix client && npm run build --prefix client"
   },
   "engines": {
     "node": "8.x"
