--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "vue-apollo": "^3.0.0-beta.16",
     "vue-axios": "^2.1.1",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.18"
+    "vuetify": "^1.0.18",
+    "chalk": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -36,7 +37,6 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
