--- a/client/package.json
+++ b/client/package.json
@@ -23,10 +23,10 @@
     "vue-apollo": "^3.0.0-beta.16",
     "vue-axios": "^2.1.1",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.18",
-    "chalk": "^2.0.1"
+    "vuetify": "^1.0.18"
   },
   "devDependencies": {
+    "chalk": "^2.0.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
