--- a/Pipfile
+++ b/Pipfile
@@ -14,12 +14,10 @@ ipdb = "*"
 
 [packages]
 
-django = "==2.0.6"
+Django = "==2.0.6"
 whitenoise = "==4.0b4"
 "psycopg2" = "==2.7.3.2"
 gunicorn = "==19.7.1"
-channels = "==1.1.8"
-asgi-redis = "==1.4.3"
 python-dotenv = "==0.7.1"
 dj-database-url = "==0.4.1"
 "boto3" = "==1.4.8"
@@ -27,6 +25,6 @@ raven = "==6.3.0"
 django-extensions = "==1.9.8"
 graphene-django = "==2.0.0"
 django-filter = "==2.0.0.dev1"
-pillow = "==5.0.0"
+Pillow = "==5.0.0"
 wagtail = "*"
 django-cors-headers = "*"
