--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,7 @@
 SECRET_KEY=FOOBAR
 DATABASE_URL=postgresql://localhost/talentlab?user=talentlab&password=talentlab
 DEBUG=True
+USE_AWS=False
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
