--- a/Pipfile
+++ b/Pipfile
@@ -14,17 +14,18 @@ ipdb = "*"
 
 [packages]
 
-Django = "==2.0.6"
+django = "==2.0.6"
 whitenoise = "==4.0b4"
 "psycopg2" = "==2.7.3.2"
 gunicorn = "==19.7.1"
 python-dotenv = "==0.7.1"
 dj-database-url = "==0.4.1"
-"boto3" = "==1.4.8"
 raven = "==6.3.0"
 django-extensions = "==1.9.8"
 graphene-django = "==2.0.0"
 django-filter = "==2.0.0.dev1"
-Pillow = "==5.0.0"
-wagtail = "*"
-django-cors-headers = "*"
+pillow = "==5.0.0"
+wagtail = "==2.1"
+django-cors-headers = "==2.2.0"
+django-storages = "*"
+"boto3" = "*"
