--- a/client/package.json
+++ b/client/package.json
@@ -11,33 +11,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "chalk": "^2.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "webpack": "^3.6.0",
-    "webpack-merge": "^4.1.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "eslint-friendly-formatter": "^3.0.0",
     "apollo-cache-inmemory": "^1.2.2",
     "apollo-client": "^2.3.2",
     "apollo-link-http": "^1.5.4",
     "appolo": "^6.0.19",
-    "axios": "^0.18.0",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
-    "uuid": "^3.2.1",
-    "vue": "^2.5.2",
-    "vue-apollo": "^3.0.0-beta.16",
-    "vue-axios": "^2.1.1",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.0.18",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "html-webpack-plugin": "^2.30.1",
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -47,28 +26,50 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "chalk": "^2.0.1",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
+    "html-webpack-plugin": "^2.30.1",
+    "lodash": "^4.17.10",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "uuid": "^3.2.1",
+    "vue": "^2.5.2",
+    "vue-apollo": "^3.0.0-beta.16",
+    "vue-axios": "^2.1.1",
     "vue-loader": "^13.3.0",
+    "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2"
+    "vue-template-compiler": "^2.5.2",
+    "vuetify": "^1.0.18",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {},
   "engines": {
