--- a/client/package.json
+++ b/client/package.json
@@ -71,7 +71,10 @@
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3"
+  },
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
