--- a/client/package.json
+++ b/client/package.json
@@ -69,9 +69,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
-  },
-  "devDependencies": {
+    "webpack-merge": "^4.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3"
   },
