--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "vue": "^2.5.2",
     "vue-apollo": "^3.0.0-beta.16",
     "vue-axios": "^2.1.1",
+    "vue-intercom": "^1.0.12",
     "vue-loader": "^13.3.0",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
