initial implementation of the user progress

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY=FOOBAR
-DATABASE_URL=postgresql://localhost/talentlab?user=talentlab&password=talentlab
+DATABASE_URL=postgres://talentlab:talentlab@localhost:5432/talentlab
 DEBUG=True
 USE_AWS=False
 AWS_ACCESS_KEY_ID=
