--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
     "vue-template-compiler": "^2.5.2",
     "vue-vimeo-player": "0.0.6",
     "vuetify": "^1.0.18",
+    "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
