--- a/client/package.json
+++ b/client/package.json
@@ -62,8 +62,8 @@
     "url-loader": "^0.5.8",
     "uuid": "^3.2.1",
     "vue": "^2.5.2",
-    "vue-apollo": "^3.0.0-beta.16"
-    "vue-axios": "^2.1.1",,
+    "vue-apollo": "^3.0.0-beta.16",
+    "vue-axios": "^2.1.1",
     "vue-intercom": "^1.0.12",
     "vue-loader": "^14.2.1",
     "vue-router": "^3.0.1",
