upgrade wagtail to 2.1.2

--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ factory-boy = "*"
 wagtail_factories = {git = "https://github.com/mvantellingen/wagtail-factories.git", ref = "master"}
 django = "==2.0.6"
 whitenoise = "==4.0b4"
-"psycopg2" = "==2.7.3.2"
+psycopg2 = "==2.7.3.2"
 gunicorn = "==19.7.1"
 python-dotenv = "==0.7.1"
 dj-database-url = "==0.4.1"
@@ -21,9 +21,9 @@ django-extensions = "==1.9.8"
 graphene-django = "==2.0.0"
 django-filter = "==2.0.0.dev1"
 pillow = "==5.0.0"
-wagtail = "==2.1"
+wagtail = "==2.1.2"
 django-cors-headers = "==2.2.0"
 django-storages = "*"
-"boto3" = "*"
+boto3 = "*"
 django-compressor = "*"
 django-libsass = "*"
