--- a/client/package.json
+++ b/client/package.json
@@ -74,7 +74,6 @@
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
@@ -87,6 +86,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "@storybook/vue": "^3.4.8"
+    "@storybook/vue": "^3.4.8",
+    "webpack-dev-server": "^2.11.3"
   }
 }
