--- a/client/package.json
+++ b/client/package.json
@@ -12,69 +12,70 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.2.2",
-    "apollo-client": "^2.3.2",
-    "apollo-link-http": "^1.5.4",
-    "appolo": "^6.0.19",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-client": "^2.4.2",
+    "apollo-link-http": "^1.5.5",
+    "appolo": "^6.0.31",
     "autoprefixer": "^7.1.2",
     "axios": "^0.18.0",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^8.2.6",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
+    "eslint-plugin-vue": "^4.7.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "html-webpack-plugin": "^2.30.1",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
+    "portfinder": "^1.0.17",
     "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.1.6",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^7.0.3",
-    "semver": "^5.3.0",
+    "sass-loader": "^7.1.0",
+    "semver": "^5.5.1",
     "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^1.0.1",
-    "uuid": "^3.2.1",
-    "vue": "^2.5.2",
-    "vue-apollo": "^3.0.0-beta.16",
-    "vue-axios": "^2.1.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
+    "uuid": "^3.3.2",
+    "vue": "^2.5.17",
+    "vue-apollo": "^3.0.0-beta.25",
+    "vue-axios": "^2.1.3",
     "vue-intercom": "^1.0.12",
     "vue-loader": "^14.2.1",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-svg-loader": "^0.9.0",
+    "vue-template-compiler": "^2.5.17",
     "vue-vimeo-player": "0.0.6",
-    "vuetify": "^1.1.8",
+    "vuetify": "^1.2.1",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.4"
   },
   "engines": {
     "node": ">= 6.0.0",
@@ -86,7 +87,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "@storybook/vue": "^3.4.8",
+    "@storybook/vue": "^3.4.10",
     "webpack-dev-server": "^2.11.3"
   }
 }
