--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ django-storages = "*"
 boto3 = "*"
 django-compressor = "*"
 django-libsass = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.7.0"
