--- a/Pipfile
+++ b/Pipfile
@@ -8,26 +8,26 @@ awscli = "*"
 ipdb = "*"
 
 [packages]
-factory-boy = "*"
-wagtail_factories = {git = "https://github.com/mvantellingen/wagtail-factories.git", ref = "master"}
-django = "==2.0.6"
-whitenoise = "==4.0b4"
-psycopg2 = "==2.7.3.2"
-gunicorn = "==19.7.1"
-python-dotenv = "==0.7.1"
-dj-database-url = "==0.4.1"
-raven = "==6.9.0"
-django-extensions = "==1.9.8"
-graphene-django = "==2.0.0"
-django-filter = "==2.0.0.dev1"
-pillow = "==5.0.0"
-wagtail = "==2.2.1"
-django-cors-headers = "==2.2.0"
-django-storages = "*"
 boto3 = "*"
+django = "==2.0.*"
+dj-database-url = "==0.5"
 django-compressor = "*"
-django-libsass = "*"
+django-cors-headers = "==2.4.*"
 django-crispy-forms = "*"
+django-extensions = "==2.1.3"
+django-filter = "==2.0"
+django-libsass = "*"
+django-storages = "*"
+factory-boy = "*"
+graphene-django = "==2.2.*"
+gunicorn = "==19.9"
+pillow = "==5.3.*"
+psycopg2 = "==2.7.*"
+python-dotenv = "==0.9.*"
+raven = "==6.9.*"
+wagtail = "==2.3.*"
+wagtail_factories = {git = "https://github.com/mvantellingen/wagtail-factories.git", ref = "master"}
+whitenoise = "*"
 
 [requires]
 python_version = "3.7.0"
