Add google tag manger code

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ AWS_SECRET_ACCESS_KEY=
 AWS_STORAGE_BUCKET_NAME=
 USE_404_FALLBACK_IMAGE=True
 DUMMY_DATA_ENABLED=True
+GOOGLE_TAG_MANAGER_CONTAINER_ID=
