--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.25",
     "vue-axios": "^2.1.3",
+    "vue-gtm": "^2.0.0",
     "vue-intercom": "^1.0.12",
     "vue-loader": "^14.2.1",
     "vue-router": "^3.0.1",
